--- a/app/assets/stylesheets/public/community.scss
+++ b/app/assets/stylesheets/public/community.scss
@@ -392,6 +392,11 @@
       margin-top: 16px;
       color: $black;
       font-weight: bold;
+
+      a {
+        color: $black;
+      }
+
     }
     .card-text {
       color: $black;
