--- a/app/views/public/accesses/tips/_form.html.erb
+++ b/app/views/public/accesses/tips/_form.html.erb
@@ -27,5 +27,5 @@
 </div>
 
 <div class="row other-link">
-  <%= link_to "Link一覧に戻る", public_laboratory_lablinks_path(@set_laboratory.id), class:"col-12" %>
+  <%= link_to "Accessへ戻る", public_laboratory_accesses_path(@set_laboratory.id), class:"col-12" %>
 </div>
