--- a/app/views/public/top/tips/_about.html.erb
+++ b/app/views/public/top/tips/_about.html.erb
@@ -63,13 +63,14 @@
                 共同研究や就職先を探しに。<br>
               </p>
               <ul>
-                  <li>共同研究先募集</li>
-                  <li>研究室求人</li>
-                  <li>企業求人</li>
+                <li>企業イベント</li>
+                  <!--<li>共同研究先募集</li>-->
+                  <!--<li>研究室求人</li>-->
+                  <!--<li>企業求人</li>-->
                   <li>OB/OG</li>
               </ul>
             </div>
-            <a href="#" class="btn btn-default">共同研究募集一覧</a>
+            <%= link_to "企業一覧", public_companies_path, class:"btn btn-default" %>
           </div>
         </div>
       </div>
