--- a/app/views/public/top/index.html.erb
+++ b/app/views/public/top/index.html.erb
@@ -35,7 +35,7 @@
             <ul class="nav nav-tabs justify-content-center" role="tablist">
               <li class="nav-item">
                 <a class="nav-link active" data-toggle="tab" href="#thesis" role="tab">
-                  THESIS
+                  Paper
                 </a>
               </li>
               <li class="nav-item">
