--- a/app/views/public/top/tips/_event.html.erb
+++ b/app/views/public/top/tips/_event.html.erb
@@ -1,61 +1,55 @@
 <!--thesis-->
 <div class="container">
   <div class="row">
-    
+
     <!-- Swiper -->
-    <div class="swiper mySwiper">
-      <div class="swiper-wrapper">
-        <!--slide 1-->
-        <div class="swiper-slide">
-          <div class="card" style="width: 20rem;">
-            <img class="card-img-top" src="/assets/public/Top/about-card1" alt="Card image cap">
-            <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-          </div>
-        </div>
-        
-        <!--slide 2-->
-        <div class="swiper-slide">
-          <div class="swiper-slide">
-            <div class="card" style="width: 20rem;">
-              <img class="card-img-top" src="/assets/public/Top/about-card2" alt="Card image cap">
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+
+        <% if @events.size <= 3 %>
+        <div class="community-around">
+          <% @events.each do |event| %>
+              <div class="card  community-card" style="width: 20rem;">
+                <div class="card-image">
+                  <% if event.image.attached? %>
+                    <%= image_tag event.image, height: '240', class:" rounded img-raised"%>
+                  <% else %>
+                    <%= image_tag asset_path('community-noimage.jpg'), class:" rounded img-raised" %>
+                  <% end %>
+                </div>
+                <div class="card-body">
+                  <h4 class="community-title"><%= link_to event.title.truncate(15), public_company_event_path(event.company_id, event.id) %></h4>
+                  <p class="card-text"><%= event.body.truncate(30) %></p>
+                </div>
               </div>
-            </div>
-          </div>
+          <% end %>
         </div>
-        
-        <!--slide 3-->
-        <div class="swiper-slide">
-          <div class="swiper-slide">
-            <div class="card" style="width: 20rem;">
-              <img class="card-img-top" src="/assets/public/Top/about-card3" alt="Card image cap">
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              </div>
+        <% else %>
+          <div class="swiper mySwiper">
+            <div class="swiper-wrapper">
+              <% @events.each do |event| %>
+
+                  <div class="swiper-slide">
+                    <div class="card community-card" style="width: 20rem;">
+                      <div class="card-image">
+                        <% if event.image.attached? %>
+                          <%= image_tag event.image, height: '240', class:" rounded img-raised"%>
+                        <% else %>
+                          <%= image_tag asset_path('community-noimage.jpg'), class:" rounded img-raised" %>
+                        <% end %>
+                      </div>
+                      <div class="card-body">
+                        <h4 class="community-title"><%= link_to event.title.truncate(15), public_company_event_path(event.company_id, event.id) %></h4>
+                        <p class="card-text"><%= event.body.truncate(30) %></p>
+                      </div>
+                    </div>
+                  </div>
+
+              <% end %>
             </div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-pagination"></div>
           </div>
-        </div>
-        
-        <!--slide 4-->
-        <div class="swiper-slide">
-          <div class="swiper-slide">
-            <div class="card" style="width: 20rem;">
-              <img class="card-img-top" src="/assets/public/Top/about-card2" alt="Card image cap">
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        
-      </div>
-      <div class="swiper-button-next"></div>
-      <div class="swiper-button-prev"></div>
-      <div class="swiper-pagination"></div>
-    </div>
+        <% end %>
 
     <!-- Swiper JS -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
@@ -80,7 +74,7 @@
         },
       });
     </script>
-    
+
   </div>
 </div>
 
