--- a/app/views/public/users/tips/mypage/_search.html.erb
+++ b/app/views/public/users/tips/mypage/_search.html.erb
@@ -1,12 +1,12 @@
-<form class="search-form col-12">
-  <div class="col-2"></div>
-  <div class="col-7">
-    <input type="text" class="form-control  search-input" placeholder="Search...">
-  </div>
-  <div class="col-1">
-    <button type="submit" class="btn btn-primary btn-round">Search</button>
-  </div>
-</form>
+<!--<form class="search-form col-12">-->
+<!--  <div class="col-2"></div>-->
+<!--  <div class="col-7">-->
+<!--    <input type="text" class="form-control  search-input" placeholder="Search...">-->
+<!--  </div>-->
+<!--  <div class="col-1">-->
+<!--    <button type="submit" class="btn btn-primary btn-round">Search</button>-->
+<!--  </div>-->
+<!--</form>-->
 
 
 
