--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -10,19 +10,19 @@
                 <ul class="menu">
                      <span>Menu</span>    
                      <li>
-                        <a href="#">Home</a>
+                        <%= link_to "Home", public_root_path %>
                       </li>
                            
                       <li>
-                         <a href="#">About</a>
+                        <%= link_to "Laboratory", public_laboratories_path %>
                       </li>
                            
                       <li>
-                        <a href="#">Blog</a>
+                        <%= link_to "Company", public_companies_path %>
                       </li>
                            
                       <li>
-                         <a href="#">Gallery</a>
+                        <%= link_to "Community", public_communities_path %>
                       </li>
                  </ul>
             </div>
@@ -31,16 +31,8 @@
               <ul class="address">
                 <span>Contact</span>       
                 <li>
-                   <i class="fa fa-phone" aria-hidden="true"></i> 
-                   <a href="#">Phone</a>
-                </li>
-                <li>
-                   <i class="fa fa-map-marker" aria-hidden="true"></i> 
-                   <a href="#">Adress</a>
-                </li> 
-                <li>
                    <i class="fa fa-envelope" aria-hidden="true"></i> 
-                   <a href="#">Email</a>
+                   <p>labonity.info@gmail.com</p>
                 </li> 
                </ul>
             </div>
