--- a/app/views/public/top/index.html.erb
+++ b/app/views/public/top/index.html.erb
@@ -23,7 +23,38 @@
   <%= render "public/top/tips/about" %>
 
    <!-- Nav tabs -->
-    
+    <div class="card pickup">
+      <div class="card-header">
+        <div class="container">
+          <div class="row">
+            <i class="far fa-2x fa-lightbulb pickup-icon"></i>
+            <h4>Pick Up</h4>
+          </div>
+
+          <div class="row">
+            <ul class="nav nav-tabs justify-content-center" role="tablist">
+              <li class="nav-item">
+                <a class="nav-link active" data-toggle="tab" href="#thesis" role="tab">
+                  Paper
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" data-toggle="tab" href="#community" role="tab">
+                  COMMUNITY
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" data-toggle="tab" href="#event" role="tab">
+                  EVENT
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+      </div>
+      
+    </div>
   </div>
 </div>
 
