--- a/app/views/public/top/index.html.erb
+++ b/app/views/public/top/index.html.erb
@@ -58,9 +58,12 @@
         <div class="tab-content text-center">
           <!--panel 1-->
           <div class="tab-pane active" id="thesis" role="tabpanel">
-
+            <% if @papers.size == 0 %>
               <p>投稿はありません。</p>
+            <% else %>
 
+            <% end %>
+          </div>
 
         </div>
       </div>
