--- a/app/views/public/top/index.html.erb
+++ b/app/views/public/top/index.html.erb
@@ -65,6 +65,11 @@
             <% end %>
           </div>
 
+          <!--panel 2-->
+          <div class="tab-pane" id="community" role="tabpanel">
+            <%= render "public/top/tips/community" %>
+          </div>
+
         </div>
       </div>
     </div>
