--- a/app/views/public/top/index.html.erb
+++ b/app/views/public/top/index.html.erb
@@ -64,7 +64,11 @@
               <%= render "public/top/tips/thesis" %>
             <% end %>
           </div>
-
+          
+         <!--panel 2-->
+          <div class="tab-pane" id="community" role="tabpanel">
+            
+          </div>
         </div>
       </div>
     </div>
