--- a/app/views/public/top/index.html.erb
+++ b/app/views/public/top/index.html.erb
@@ -67,7 +67,7 @@
           
          <!--panel 2-->
           <div class="tab-pane" id="community" role="tabpanel">
-            
+            <%= render "public/top/tips/community" %>
           </div>
         </div>
       </div>
