--- a/app/views/public/top/tips/_community.html.erb
+++ b/app/views/public/top/tips/_community.html.erb
@@ -5,6 +5,24 @@
     <!-- Swiper -->
 
 
+    <div class="community-around">
+      <% @communities.each do |community| %>
+          <div class="card  community-card" style="width: 20rem;">
+            <div class="card-image">
+              <% if community.image.attached? %>
+                <%= image_tag community.image, height: '240', class:" rounded img-raised"%>
+              <% else %>
+                <%= image_tag asset_path('community-noimage.jpg'), class:" rounded img-raised" %>
+              <% end %>
+            </div>
+            <div class="card-body">
+              <h4 class="community-title"><%= link_to community.name.truncate(15), public_community_path(community.id) %></h4>
+              <p class="card-text"><%= community.introduction.truncate(30) %></p>
+            </div>
+          </div>
+      <% end %>
+    </div>
+
 
     <!-- Swiper JS -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
