--- a/app/views/public/top/tips/_community.html.erb
+++ b/app/views/public/top/tips/_community.html.erb
@@ -4,7 +4,7 @@
 
     <!-- Swiper -->
 
-
+    <% if @communities.size <= 3 %>
     <div class="community-around">
       <% @communities.each do |community| %>
           <div class="card  community-card" style="width: 20rem;">
@@ -22,7 +22,34 @@
           </div>
       <% end %>
     </div>
-
+    <% else %>
+      <div class="swiper mySwiper">
+        <div class="swiper-wrapper">
+          <% @communities.each do |community| %>
+    
+              <div class="swiper-slide">
+                <div class="card community-card" style="width: 20rem;">
+                  <div class="card-image">
+                    <% if community.image.attached? %>
+                      <%= image_tag community.image, height: '240', class:" rounded img-raised"%>
+                    <% else %>
+                      <%= image_tag asset_path('community-noimage.jpg'), class:" rounded img-raised" %>
+                    <% end %>
+                  </div>
+                  <div class="card-body">
+                    <h4 class="community-title"><%= link_to community.name.truncate(15), public_community_path(community.id) %></h4>
+                    <p class="card-text"><%= community.introduction.truncate(30) %></p>
+                  </div>
+                </div>
+              </div>
+    
+          <% end %>
+        </div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-pagination"></div>
+      </div>
+    <% end %>
 
     <!-- Swiper JS -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
