--- a/app/views/public/top/index.html.erb
+++ b/app/views/public/top/index.html.erb
@@ -69,6 +69,15 @@
           <div class="tab-pane" id="community" role="tabpanel">
             <%= render "public/top/tips/community" %>
           </div>
+          
+          <!--panel 3-->
+          <div class="tab-pane" id="event" role="tabpanel">
+            <% if @events.size == 0 %>
+              <p>投稿はありません。</p>
+            <% else %>
+              <%= render "public/top/tips/event" %>
+            <% end %>
+          </div>
         </div>
       </div>
     </div>
