--- a/app/assets/stylesheets/public/form.scss
+++ b/app/assets/stylesheets/public/form.scss
@@ -7,6 +7,12 @@
   padding: 30px 0;
 }
 
+.background-black {
+  background-color: rgba(0, 0, 0, 0.2);
+  margin: 0;
+  padding: 30px 0;
+}
+
 .general-form {
   width: 40vw;
   min-width: 300px;
