--- a/app/assets/stylesheets/public/form.scss
+++ b/app/assets/stylesheets/public/form.scss
@@ -105,7 +105,17 @@
     justify-content: center;
     text-align: center;
   }
+  
+  .table {
+    margin: 16px 0;
+  }
+  
+  .confirm-btn {
+    border: none;
+  }
 }
+
+
 
 .lab-edit {
 
