--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -32,7 +32,7 @@
                 <span>Contact</span>       
                 <li>
                    <i class="fa fa-envelope" aria-hidden="true"></i> 
-                   <p>labonity.info@gmail.com</p>
+                   <%= link_to "お問い合わせ", new_public_contact_path, class:"address-link" %>
                 </li> 
                </ul>
             </div>
