--- a/app/views/contact_mailer/send_mail.html.erb
+++ b/app/views/contact_mailer/send_mail.html.erb
@@ -1,5 +1,4 @@
 <%= @contact.name %> 様 から問い合わせがありました。<br>
-【Mail】：<%= @contact.email %><br>
-【用件】：<%= @contact.subject_i18n %><br>
+【用件】：<%= @contact.subject%><br>
 【お問い合わせ内容】<br>
 <span style="white-space: pre-wrap;"><%= @contact.message %></span>
