--- a/app/assets/stylesheets/public/form.scss
+++ b/app/assets/stylesheets/public/form.scss
@@ -35,11 +35,11 @@
     padding: 10px;
     display: flex;
     justify-content: center;
-    
+
     form {
       width: 100%;
     }
-    
+
 
     .label {
       font-weight: bold;
@@ -105,11 +105,11 @@
     justify-content: center;
     text-align: center;
   }
-  
+
   .table {
     margin: 16px 0;
   }
-  
+
   .confirm-btn {
     border: none;
   }
@@ -137,14 +137,14 @@
     display: flex;
     flex-wrap: wrap;
   }
-  
+
   &-image {
       margin-bottom: 8px;
     }
-    
+
   .contents {
     text-align: center;
-    
+
     .btn {
       margin-bottom: 16px;
     }
@@ -154,3 +154,36 @@
     width: 100%;
   }
 }
+
+.modal-body {
+  input[type="text"] {
+    width: 100%;
+    padding: 4px 8px;
+    margin-bottom: 4px;
+  }
+
+  input[type="date"] {
+    width: 100%;
+    padding: 4px 8px;
+  }
+
+  input[type="checkbox"] {
+    margin: 12px 8px;
+    padding: 8px;
+  }
+
+  textarea {
+    width: 100%;
+    padding: 4px 8px;
+    row: 10;
+  }
+
+    &-submit {
+      display: flex;
+      justify-content: center;
+      margin-top: 16px;
+      font-weight: bold;
+    }
+
+}
+
