--- a/app/assets/stylesheets/shared/footer.scss
+++ b/app/assets/stylesheets/shared/footer.scss
@@ -58,6 +58,12 @@ footer {
     font-size: 18px;
 }
 
+.address .far {
+    color: #da3e44;
+    margin-right: 10px;
+    font-size: 18px;
+}
+
 .address li {
   display: flex;
 }
