--- a/app/views/public/users/mypage.html.erb
+++ b/app/views/public/users/mypage.html.erb
@@ -36,7 +36,7 @@
         </div>
 
         <!--所属-->
-        <div class="row">
+        <div class="row user-group">
           <%= render "public/users/tips/mypage/group" %>
         </div>
 
