--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -4,7 +4,7 @@
 <!--flash設定-->
 <%= render "shared/flash" %>
 
-<div class="container user-showpage">
+<div class="container container-page user-showpage">
   <div class="row user-showpage-profile">
     <!--Profile-->
     <%= render "public/users/tips/show/profile" %>
