--- a/app/assets/stylesheets/public/top.scss
+++ b/app/assets/stylesheets/public/top.scss
@@ -83,3 +83,24 @@
 
 }
 
+.faq-page {
+
+  &-title {
+    align-items: center;
+    .icon {
+      margin-right: 16px;
+    }
+
+    h2 {
+      margin: 0;
+      font-weight: bold;
+    }
+  }
+
+  .table {
+    td {
+      border-top: none;
+    }
+  }
+
+}
