--- a/app/views/public/users/tips/mypage/_group.html.erb
+++ b/app/views/public/users/tips/mypage/_group.html.erb
@@ -1,2 +1,24 @@
-<!--<i class="fas fa-2x fa-users"></i>-->
-<!--<h3>Group</h3>-->
+<div class="set-title">
+  <i class="fas fa-2x fa-users icon"></i>
+  <h3>Group</h3>
+</div>
+
+<div class="user-group-laboratory col-12">
+  <table class="table">
+    <thead>
+      <tr>
+        <th width="100%">研究室</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% if @laboratories != nil %>
+        <% @laboratories.each do |laboratory| %>
+          <% laboratory = Laboratory.find(laboratory.laboratory_id) %>
+          <tr>
+            <td><%= link_to laboratory.name, public_laboratory_path(laboratory.id) %></td>
+          </tr>
+        <% end %>
+      <% end %>
+    </tbody>
+  </table>
+</div>
