--- a/app/views/public/users/tips/mypage/_profile.html.erb
+++ b/app/views/public/users/tips/mypage/_profile.html.erb
@@ -18,7 +18,17 @@
       </h5>
     </td>
   </tr>
-  
+
+  <td>
+    <div class="flex-type">
+      <h6 class="user-follow col-12">follow <%= @user.followings.count %></h6>
+    </div>
+    <div class="flex-type">
+      <h6 class="user-follow follower-count col-12">follower <%= @user.followers.count %></h6>
+    </div>
+    <%= link_to "一覧", public_user_relationships_path(@user.login_id), class:"badge badge-default follow-link col-12" %>
+  </td>
+
   <tr>
     <td class="user-show-link">
       <%= link_to edit_user_registration_path(current_user.login_id), class:"btn btn-default btn-lg" do %>
