--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,37 +5,42 @@
               <span class="logo">LABONITY</span>
               <p class="copy-right">&copy; 2021 SHUHEI NARA</p>
             </div>
-            
+
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <ul class="menu">
-                     <span>Menu</span>    
+                     <span>Menu</span>
                      <li>
                         <%= link_to "Home", public_root_path %>
                       </li>
-                           
+
                       <li>
                         <%= link_to "Laboratory", public_laboratories_path %>
                       </li>
-                           
+
                       <li>
                         <%= link_to "Company", public_companies_path %>
                       </li>
-                           
+
                       <li>
                         <%= link_to "Community", public_communities_path %>
                       </li>
                  </ul>
             </div>
-       
+
             <div class="col-md-4 col-sm-6 col-xs-12">
               <ul class="address">
-                <span>Contact</span>       
+                <span>Contact</span>
                 <li>
-                   <i class="fa fa-envelope" aria-hidden="true"></i> 
+                   <i class="fa fa-envelope" aria-hidden="true"></i>
                    <%= link_to "お問い合わせ", new_public_contact_path, class:"address-link" %>
-                </li> 
+                </li>
+                <span>FAQ</span>
+                <li>
+                  <i class="far fa-question-circle" aria-hidden="true"></i>
+                  <%= link_to "よくある質問", public_top_path, class:"address-link" %>
+                </li>
                </ul>
             </div>
-        </div> 
+        </div>
     </div>
 </footer>
