--- a/app/assets/stylesheets/public/layout.scss
+++ b/app/assets/stylesheets/public/layout.scss
@@ -49,7 +49,19 @@
 }
 
 section {
-	overflow-y: scroll;
+	overflow: auto;
 	margin: 10px 0;
+  max-height: 500px;
+}
 
+.content-title {
+  span {
+    display: inline-block;
+  }
+}
+
+.message-container {
+  overflow-y: scroll;
+  height: 400px;
+  width: 100%;
 }
