--- a/app/views/public/communities/index.html.erb
+++ b/app/views/public/communities/index.html.erb
@@ -38,7 +38,7 @@
 
   <!--community 一覧-->
   <div class="row community-cards">
-    <% @communities.each do |community| %>
+    <% @communities.includes([:image_attachment]).each do |community| %>
 
       <%= link_to public_community_path(community.id) do %>
         <div class="card community-card" style="width: 20rem;">
