--- a/app/views/public/communities/show.html.erb
+++ b/app/views/public/communities/show.html.erb
@@ -7,7 +7,7 @@
 <!--flash設定-->
 <%= render "shared/flash" %>
 
-<div class="container community-show-page">
+<div class="container container-page community-show-page">
   <div class="row community-show-head">
     <%= render "public/communities/tips/show/profile" %>
   </div>
