--- a/app/views/public/communities/tips/show/_profile.html.erb
+++ b/app/views/public/communities/tips/show/_profile.html.erb
@@ -7,7 +7,7 @@
 </div>
 
 <div class="col-md-9">
-  <div class="community-profile-head">
+  <div class="community-profile-head content-top">
   <h3>
     <%= @community.name %>
   </h3>
