--- a/app/views/public/communities/tips/show/_messages.html.erb
+++ b/app/views/public/communities/tips/show/_messages.html.erb
@@ -4,14 +4,14 @@
 
     m << p.text_field_block(:body, "message", {class:"text-field"})
   end %>
-  
+
   <%= f.hidden_field :user_id, :value => current_user.id %>
   <%= f.hidden_field :community_id, :value => @community.id %>
 
   <%= f.submit "登録", class:"btn btn-primary btn-sm"%>
 <% end %>
 
-<div class="background-blue container">
+<div class="background-blue container message-container">
   <% @community_messages.each do |message| %>
   <!--<div class="row community-message-row">-->
     <% if message.user_id == current_user.id %>
@@ -20,9 +20,9 @@
       <div class="balloon2-right">
         <div class="community-flex">
           <% if User.find(message.user_id).profile_image.attached? %>
-            <%= image_tag User.find(message.user_id).profile_image.variant(resize:'30x30') , class:"rounded img-raised"%>
+            <%= image_tag User.find(message.user_id).profile_image.variant(resize:'30x30') , class:"rounded"%>
           <% else %>
-            <%= image_tag asset_path('no_image.jpg'), class:"rounded img-raised", size:"30" %>
+            <%= image_tag asset_path('no_image.jpg'), class:"rounded", size:"30" %>
           <% end %>
           <p class="community-flex-left"><%= User.find(message.user_id).family_name + User.find(message.user_id).given_name %></p>
         </div>
