--- a/app/views/public/users/mypage.html.erb
+++ b/app/views/public/users/mypage.html.erb
@@ -16,7 +16,7 @@
   <!--search-->
   <div class="mypage-search">
     <div class="container">
-      <div class="row">
+      <div class="row search">
         <%= render "public/users/tips/mypage/search" %>
       </div>
     </div>
