--- a/app/views/public/top/tips/_about.html.erb
+++ b/app/views/public/top/tips/_about.html.erb
@@ -22,12 +22,12 @@
               <p>
                 研究室のHP運営を簡単に。<br>
               </p>
-              <ul>
-                  <li>研究成果管理</li>
-                  <li>メンバー管理</li>
-                  <li>タイムカード機能</li>
-                  <li>プレスリリース設定</li>
-              </ul>
+              <!--<ul>-->
+              <!--    <li>研究成果管理</li>-->
+              <!--    <li>メンバー管理</li>-->
+              <!--    <li>タイムカード機能</li>-->
+              <!--    <li>プレスリリース設定</li>-->
+              <!--</ul>-->
             </div>
             <%= link_to "研究室を探す", public_laboratories_path, class:"btn btn-default" %>
           </div>
@@ -41,12 +41,12 @@
               <p>
                 あなたの研究成果を記録に。<br>
               </p>
-              <ul>
-                  <li>論文管理</li>
-                  <li>学会管理</li>
-                  <li>勉強コミュニティ</li>
-                  <li>データ管理</li>
-              </ul>
+              <!--<ul>-->
+              <!--    <li>論文管理</li>-->
+              <!--    <li>学会管理</li>-->
+              <!--    <li>勉強コミュニティ</li>-->
+              <!--    <li>データ管理</li>-->
+              <!--</ul>-->
             </div>
             <%  %>
            <%= link_to "MyPage", new_user_session_path, class:"btn btn-default" %>
@@ -62,13 +62,13 @@
               <p>
                 共同研究や就職先を探しに。<br>
               </p>
-              <ul>
-                <li>企業イベント</li>
-                  <!--<li>共同研究先募集</li>-->
-                  <!--<li>研究室求人</li>-->
-                  <!--<li>企業求人</li>-->
-                  <li>OB/OG</li>
-              </ul>
+              <!--<ul>-->
+              <!--  <li>企業イベント</li>-->
+              <!--    <li>共同研究先募集</li>-->
+              <!--    <li>研究室求人</li>-->
+              <!--    <li>企業求人</li>-->
+              <!--    <li>OB/OG</li>-->
+              <!--</ul>-->
             </div>
             <%= link_to "企業一覧", public_companies_path, class:"btn btn-default" %>
           </div>
